--- a/src/backend/.env
+++ b/src/backend/.env
@@ -2,9 +2,8 @@ DB_URL=mariadb+aiomysql://admin_crm:HHHHHhhhhh12345@localhost/crm?charset=utf8mb
 DB_ECHO=True
 
 
-EMAIL_USERNAME="egorovdaniil01062004"
-EMAIL_HOST="smtp.gmail.com"
-EMAIL_PORT=587
-EMAIL_PASSWORD="Egorov01062004googleacc"
-EMAIL_SSL_TLS=False
-
+EMAIL_USERNAME="Egorov-D-A01"
+EMAIL_SERVER_SMTP="smtp.yandex.ru"
+EMAIL_PORT=465
+EMAIL_PASSWORD="azmhanftadtptimn"
+EMAIL_FROM="Egorov-D-A01@yandex.ru"
