--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -11,10 +11,12 @@ python = "^3.11"
 aiomysql = "^0.2.0"
 fastapi-mail = "^1.4.1"
 sqlalchemy = "^2.0.30"
-bcrypt = "^4.1.3"
 pyjwt = "^2.8.0"
 fastapi = "^0.111.0"
 asyncio = "^3.4.3"
+fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
+google-api-python-client = "^2.133.0"
+oauth2client = "^4.1.3"
 
 
 [build-system]
