--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,32 +1,51 @@
-version: "3"
-
+version: "2"
 services:
+  database:
+    image: mariadb:latest
+    restart: always
+    env_file:
+      - ./.env
+    ports:
+      - "3306:3306"
+    networks:
+      - backend-network
+    volumes:
+      - ./database:/var/lib/mysql
+
   backend:
     build:
       context: .
-      dockerfile: backend/Dockerfile
-    environment:
-      # DB_URL=...
-      DB_URL=mariadb+aiomysql://admin_crm:HHHHHhhhhh12345@localhost/crm?charset=utf8mb4
-      DB_ECHO=True
-
-
-      EMAIL_USERNAME="Egorov-D-A01"
-      EMAIL_HOST="smtp.yandex.ru"
-      EMAIL_PORT=465
-      EMAIL_PASSWORD="azmhanftadtptimn"
-      EMAIL_FROM="Egorov-D-A01@yandex.ru"
+      dockerfile: Dockerfile
+    restart: always
+    env_file:
+      - ./.env
     ports:
       - "8000:8000"
+    networks:
+      - backend-network
+      - frontend-network
+    depends_on:
+      - database
 
   nginx:
     image: nginx:latest
+    restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - ./frontend/html:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl:/ssl
+      - ./ssl:/etc/ssl
+    env_file:
+      - ./.env
     depends_on:
       - backend
+    networks:
+      - frontend-network
+
+networks:
+  backend-network:
+    name: backend-network
+  frontend-network:
+    name: frontend-network
